--- a/code-example-random-forest.ipynb
+++ b/code-example-random-forest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "11798f2c",
+   "id": "ff0b1dbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50ade694",
+   "id": "f0f059d3",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dae699da",
+   "id": "a1ba5741",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75c96c92",
+   "id": "b6b6ba3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "26e17734",
+   "id": "8fc2acba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "621cebe5",
+   "id": "071e826c",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4d19d748",
+   "id": "072eb005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac9a083f",
+   "id": "e5f919a5",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d4ec1ed1",
+   "id": "ddb03b52",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02af6335",
+   "id": "ac3c3282",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "85566e06",
+   "id": "2bc72f6f",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "31088db8",
+   "id": "d4d145a3",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1bcab99f",
+   "id": "3115592a",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da2556de",
+   "id": "39c57852",
    "metadata": {},
    "source": [
     "# GridSearchCV"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f41c3ac7",
+   "id": "0efd6daf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "97d93ee8",
+   "id": "3c9fc4db",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2d3e0bfb",
+   "id": "331e52bf",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e87d7476",
+   "id": "4553bd06",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d2f4938a",
+   "id": "e698be56",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29c1880",
+   "id": "d8c297be",
    "metadata": {},
    "source": [
     "# RandomSearchCV"
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "89810d91",
+   "id": "0ab79200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,8 +582,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "43250782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [20, 60, 100, 120], 'max_features': [0.2, 0.6, 1.0], 'max_depth': [2, 8, None], 'max_samples': [0.5, 0.75, 1.0], 'bootstrap': [True, False], 'min_samples_split': [2, 5], 'min_samples_leaf': [1, 2]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'n_estimators': n_estimators,\n",
+    "               'max_features': max_features,\n",
+    "               'max_depth': max_depth,\n",
+    "              'max_samples':max_samples,\n",
+    "              'bootstrap':bootstrap,\n",
+    "              'min_samples_split':min_samples_split,\n",
+    "              'min_samples_leaf':min_samples_leaf\n",
+    "             }\n",
+    "print(param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "df6a7af9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\surya\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:372: FitFailedWarning: \n",
+      "25 fits failed out of a total of 50.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "25 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\surya\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\surya\\anaconda3\\lib\\site-packages\\sklearn\\ensemble\\_forest.py\", line 379, in fit\n",
+      "    raise ValueError(\n",
+      "ValueError: `max_sample` cannot be set if `bootstrap=False`. Either switch to `bootstrap=True` or set `max_sample=None`.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\Users\\surya\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [0.80977891        nan 0.80153061        nan        nan        nan\n",
+      "        nan 0.81377551 0.80170068 0.80977891]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestClassifier(), n_jobs=-1,\n",
+       "                   param_distributions={'bootstrap': [True, False],\n",
+       "                                        'max_depth': [2, 8, None],\n",
+       "                                        'max_features': [0.2, 0.6, 1.0],\n",
+       "                                        'max_samples': [0.5, 0.75, 1.0],\n",
+       "                                        'min_samples_leaf': [1, 2],\n",
+       "                                        'min_samples_split': [2, 5],\n",
+       "                                        'n_estimators': [20, 60, 100, 120]},\n",
+       "                   verbose=2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "rf_grid = RandomizedSearchCV(estimator = rf, \n",
+    "                       param_distributions = param_grid, \n",
+    "                       cv = 5, \n",
+    "                       verbose=2, \n",
+    "                       n_jobs = -1)\n",
+    "rf_grid.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "75d85f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 120,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_samples_leaf': 2,\n",
+       " 'max_samples': 1.0,\n",
+       " 'max_features': 0.2,\n",
+       " 'max_depth': 2,\n",
+       " 'bootstrap': True}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d5d712a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8137755102040816"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "804e2122",
+   "id": "6f94da45",
    "metadata": {},
    "outputs": [],
    "source": []
